--- a/actions/cached-deps/action-1.yml
+++ b/actions/cached-deps/action-1.yml
@@ -1,22 +1,16 @@
 name: 'Get and cache dependencies'
 description: 'Get and cache dependencies (via npm) for faster builds'
-inputs:
-  caching:
-    description: 'wheather to cache dependencies or not'
-    required: false
-    default: 'true'
 runs:
   using: 'composite'
   steps:
     - name: Cache dependencies
-      if: inputs.casing == 'true'
       id: cache
       uses: actions/cache@v3
       with:
         path: node_modules
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
-      if: steps.cache.outputs.cache-hit != 'true' || inputs.caching !== 'true'
+      if: steps.cache.outputs.cache-hit != 'true'
       run: npm ci
       shell: bash 
     
