--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: load & cache dependencies
-        uses: ./actions/cached-deps/action.yml
+        uses: ./.github/actions/cached-deps/action.yml
       - name: Test code
         id: run-tests
         run: npm run test
