--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: load & cache dependencies
-        uses: ./.github/actions/cached-deps/action.yml
+        uses: ./.github/actions/cached-deps
         with:
           caching: 'false'
       - name: Lint code
@@ -38,7 +38,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: load & cache dependencies
-        uses: ./.github/actions/cached-deps/action.yml
+        uses: ./.github/actions/cached-deps
       - name: Build website
         run: npm run build
       - name: Upload artifacts
